Layout: Fix rendering issues on mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -32,6 +32,10 @@ $content-padding: 60px;
 $site-margin-bottom: -$footer-height;
 $search-highlight: #ffff66;
 
+$search-bar-height: 35px;
+$algo-padding: 1em;
+
+
 .browsehappy {
     margin: 0.2em 0;
     background: #ccc;
@@ -123,28 +127,11 @@ pre code {
         padding: 5px 0;
     }
 
-    &-collapse.collapsing,
-    &-collapse.in {
-        margin-top: 10px;
-    }
-
-    .active a {
-        background: $nav-link-hover-bg;
-    }
-
     &-nav.nav {
-        margin-right: 0;
+        text-align: center;
 
         a {
-            padding: 15px 25px;
-            margin: -10px 0;
             color: $header-link-color;
-        }
-    }
-
-    &-nav.navbar-right {
-        &:last-child {
-            margin-right: 0;
         }
     }
 
@@ -156,27 +143,70 @@ pre code {
             background: #428bca;
         }
     }
+
+    &-collapse {
+        border-top: none;
+        box-shadow: none;
+    }
+
+    .active a {
+        background: $nav-link-hover-bg;
+    }
 }
 
+@media (min-width: $screen-sm-min) {
+    .navbar {
+        &-nav {
+            &.navbar-right:last-child {
+                margin-right: 0;
+            }
+
+            &.nav {
+                margin-right: 0;
+
+                a {
+                    padding: 15px 25px;
+                    margin: -10px 0;
+                }
+            }
+        }
+    }
+}
+
+
 .search-bar {
-    margin-left: 25px;
+    $search-icon-padding: ($search-bar-height - $font-size-base + 2) / 2;
+
+    position: relative;
+    margin: 0 -15px;
 
     &-input {
-        height: 32px;
-        padding-left: (32px - $font-size-base + 2) / 2;
-        padding-right: 30px;
-        margin-right: -15px;
+
+        width: 100%;
+        height: $search-bar-height;
+        padding-left: $search-icon-padding;
+        padding-right: $search-bar-height;
         border: none;
         font-size: $font-size-base - 2;
     }
 
     &-icon {
-        position: relative;
-        left: -15px;
+        position: absolute;
+        top: 0;
+        right: $search-icon-padding;
+        line-height: $search-bar-height;
         opacity: .3;
         pointer-events: none;
     }
 }
+
+@media (min-width: $screen-sm-min) {
+    .search-bar {
+        float: right;
+        margin-left: 25px;
+    }
+}
+
 
 .view-content {
 
@@ -210,6 +240,12 @@ pre code {
     }
 }
 
+@media (min-width: $screen-sm-min) {
+    .footer-links {
+        float: right;
+    }
+}
+
 
 .page {
     &-header {
@@ -239,7 +275,6 @@ pre code {
     }
 }
 
-$algo-padding: 1em;
 
 .algo {
     padding: $algo-padding;
